<?xml version="1.0" encoding="utf-8"?>
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainScroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background" >

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:keepScreenOn="true"
		    >

			<ImageView
			    android:id="@+id/imageView1"
			    android:layout_width="300dp"
			    android:layout_height="120dp"
			    android:layout_gravity="center_horizontal"
			    android:src="@drawable/jokie_logoklein"
			    android:contentDescription="@string/imgDesc"
				/>
   
			<TextView
			    android:id="@+id/kjkWelcomeTXT"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/kjkWelcome"
				android:layout_margin="10dp"
				android:textColor="#444444"
			    />

		<Button
			android:id="@+id/explainBtn"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
			android:text="@string/KjkBtnExplain"
		    android:layout_marginTop="25dp"
		    />

		<Button
			android:id="@+id/getQuestionBtn"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
			android:text="@string/KjkBtnQuestion"
		    android:layout_marginTop="25dp"
		    android:visibility="gone"
		    />

		<TextView
		    android:id="@+id/kjkGPSFixTXT"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/kjkNoGPSFix"
			android:layout_margin="10dp"
			android:textColor="#444444"
		    />

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
			android:id="@+id/questionList"
		    >
		</LinearLayout>

		</LinearLayout>
		
	</ScrollView>