<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainScroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    >

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >

		<ImageView
		    android:id="@+id/imageView1"
		    android:layout_width="300dp"
		    android:layout_height="120dp"
		    android:layout_gravity="center_horizontal"
		    android:src="@drawable/jokie_logoklein"
		    android:contentDescription="@string/imgDesc"
			/>
  
		<TextView
		    android:id="@+id/profileDescTXT"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/ProfileDesc"
			android:layout_marginBottom="15dp"
			android:textColor="#444444"
		    />

		<Button
		    android:id="@+id/LogoutBTN"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
			android:text="@string/BtnLogout"
		    android:layout_marginTop="8dp"
		    />

		<Button
			android:id="@+id/backBTN"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
			android:text="@string/BtnBack"
		    android:layout_marginTop="8dp"
		    />

	</LinearLayout>
	
</ScrollView>