<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainScroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    >

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >

		<ImageView
			android:id="@+id/imageView1"
		    android:layout_width="300dp"
		    android:layout_height="120dp"
			android:layout_gravity="center_horizontal"
			android:src="@drawable/jokie_logoklein"
			android:contentDescription="@string/imgDesc"
			/>
  
		<TextView
		    android:id="@+id/wieInParkDescTXT"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/WelcomeWieinPark"
			android:textColor="#444444"
			android:layout_margin="8dp"
			android:layout_marginBottom="0dp"
		    />

		<Button
			android:id="@+id/backBTN"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
			android:text="@string/BtnBack"
		    android:layout_marginTop="8dp"
		    android:textColor="#444444"
		    />
		
		<ProgressBar
		    android:id="@+id/progressBar"
		    style="?android:attr/progressBarStyleLarge"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="8dp"
		    android:layout_gravity="center_horizontal"
		    />

		<Button
			android:id="@+id/setDateBTN"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
			android:text="@string/WieinParkBezoek"
		    android:layout_marginTop="8dp"
		    android:visibility="gone"
			android:textColor="#444444"
		    />

		<TextView
		    android:id="@+id/membersTodayCaption"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/WelcomeWieinParkToday"
			android:layout_marginTop="8dp"
			android:textStyle="bold"
			android:visibility="gone"
			android:textColor="#444444"
			/>
		
		<TextView
		    android:id="@+id/membersToday"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text=""
			android:textColor="#555555"
			android:visibility="gone"
			 />
		
		<TextView
		    android:id="@+id/membersTomorrowCaption"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/WelcomeWieinParkTomorrow"
			android:layout_marginTop="8dp"
			android:textStyle="bold"
			android:textColor="#444444"
			android:visibility="gone"
		    />
		
		<TextView
		    android:id="@+id/membersTomorrow"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text=""
			android:textColor="#555555"
			android:visibility="gone"
			 />
		
		<TextView
		    android:id="@+id/membersDayAfterCaption"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/WelcomeWieinParkDayAfterTomorrow"
			android:layout_marginTop="8dp"
			android:textStyle="bold"
			android:textColor="#444444"
			android:visibility="gone"
		    />
		
		<TextView
		    android:id="@+id/membersDayAfter"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text=""
			android:textColor="#555555"
			android:visibility="gone"
			 />

	</LinearLayout>

</ScrollView>