<?xml version="1.0" encoding="utf-8"?>
    	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/mainScroller"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
		android:background="@drawable/background"
	    >

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:keepScreenOn="true"
		    >

			<ImageView
			    android:id="@+id/imageView1"
			    android:layout_width="300dp"
			    android:layout_height="120dp"
			    android:layout_gravity="center_horizontal"
			    android:src="@drawable/jokie_logoklein"
			    android:contentDescription="@string/imgDesc"
				/>
   
			<TextView
			    android:id="@+id/welcomeTXT"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/KjkUitlegText"
				android:layout_margin="25dp"
				android:textColor="#444444"
			    />

			<Button
				android:id="@+id/backBtn"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
				android:text="@string/BtnBack"
			    android:layout_margin="10dp"
			    android:textColor="#444444"
			    />

		</LinearLayout>
		
	</ScrollView>